eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Session_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if the staff member has attended the session, leave unticked if they did not</inlineHelpText>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch_Wednesday_Session__c</fullName>
        <label>Branch Wednesday Session</label>
        <referenceTo>Branch_Wednesday_Session__c</referenceTo>
        <relationshipLabel>Session Attendances</relationshipLabel>
        <relationshipName>Session_Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>Text (Staff_member__r.Branch__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff member</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Session Attendances</relationshipLabel>
        <relationshipName>Session_Attendances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Session Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Branch_Wednesday_Session__c</columns>
        <columns>Staff_member__c</columns>
        <columns>Attended__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch_Wednesday_Session__c</field>
            <operation>equals</operation>
            <value>Template</value>
        </filters>
        <label>All Staff Templates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Edgware_Road_Branch_Staff_Template</fullName>
        <columns>NAME</columns>
        <columns>Staff_member__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>Edgware</value>
        </filters>
        <filters>
            <field>Branch_Wednesday_Session__c</field>
            <operation>equals</operation>
            <value>Template</value>
        </filters>
        <label>Edgware Road Branch Staff Template</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Knightsbridge_Branch_Staff_Template</fullName>
        <columns>NAME</columns>
        <columns>Staff_member__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>Knight</value>
        </filters>
        <filters>
            <field>Branch_Wednesday_Session__c</field>
            <operation>equals</operation>
            <value>Template</value>
        </filters>
        <label>Knightsbridge Branch Staff Template</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leicester_Branch_Staff_Template</fullName>
        <columns>NAME</columns>
        <columns>Staff_member__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Leicester</value>
        </filters>
        <filters>
            <field>Branch_Wednesday_Session__c</field>
            <operation>equals</operation>
            <value>Template</value>
        </filters>
        <label>Leicester Branch Staff Template</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manchester_Staff_Template</fullName>
        <columns>NAME</columns>
        <columns>Staff_member__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Manchester</value>
        </filters>
        <filters>
            <field>Branch_Wednesday_Session__c</field>
            <operation>equals</operation>
            <value>Template</value>
        </filters>
        <label>Manchester Staff Template</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Small_Heath_Staff_Template</fullName>
        <columns>NAME</columns>
        <columns>Staff_member__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>Small</value>
        </filters>
        <filters>
            <field>Branch_Wednesday_Session__c</field>
            <operation>equals</operation>
            <value>Template</value>
        </filters>
        <label>Small Heath Staff Template</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Whitechapel_Branch_Staff_Template</fullName>
        <columns>NAME</columns>
        <columns>Staff_member__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>White</value>
        </filters>
        <filters>
            <field>Branch_Wednesday_Session__c</field>
            <operation>equals</operation>
            <value>Template</value>
        </filters>
        <label>Whitechapel Branch Staff Template</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Attendance-{00}-{DDMMYY}</displayFormat>
        <label>Session Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>